<resources>
    <string name="app_name">MyChat</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="message_text">Message text</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="your_name">Your name</string>
    <string name="tap_to_login">Tap to login</string>
    <string name="tap_to_sign_up">Tap to sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_email">Invalid Email Address</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="authentication_successful">Authentication successful.</string>
    <string name="passwords_equals">Password should be equals</string>
    <string name="sign_in">Sign In</string>
    <string name="input_name">Input Your name</string>
    <string name="sign_out">Sign Out</string>
</resources>
